fixed navbar links on small screens overlapping

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -28,7 +28,7 @@
     border: 5px solid var(--battleship-grey);
     border-radius: 10px;
     max-width: 2000px;
-    margin-top: 20px auto;
+    margin-top: auto;
     margin-left: auto;
     margin-right: auto;
 }
@@ -39,7 +39,8 @@
     list-style-type: none;
     flex-direction: row;
     padding: 0;
-    margin: 0;
+    margin: 10px;
+    justify-content: space-between;
 }
 
 .navlist li a {
@@ -52,6 +53,10 @@
     word-break: keep-all;
     width: 75px;
     text-align: center;
+}
+
+.navlist li {
+    margin: 13px;
 }
 
 .card {
@@ -93,3 +98,4 @@
     align-items: left;
     justify-content: left;
 }
+
